# data-functions

./: LICENSE  README.md  pyproject.toml
data_functions/functions/bigquery/stream/writing/: main.py  writer.py
data_functions/functions/bigquery/stream/writing/proto_declaration/: request.proto  request_pb2.py
data_functions/functions/helloworld/: main.py
data_gateway_functions/functions/bigquery/stream/writing/: main.py  requirements.txt  writer.py
data_gateway_functions/functions/bigquery/stream/writing/proto_declaration/: request.proto  rum_raw_pb2.py  rum_raw_pb2.pyi
tests/: test_data_functions.py  test_data_gateway.py
