[tool.poetry]
name = "data-gateway-functions"
version = "0.1.0"
description = ""
authors = ["Valery Lavrentiev <lavsurgut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^4.22.3"
pendulum = "^2.1.2"
google-cloud-bigquery-storage = "^2.19.1"
functions-framework = "^3.3.0"
Flask = "^2.3.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
